routes displaying as anticipated on UI
